--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
 	<a href="#"><span>New to you</span></a>
-	<a href="https://github.com/jancordeiro" target="_blank"><span><i class="fa-brands fa-github"></i></span></a>
+	<a href="https://github.com/jancordeiro/css-glow-button" target="_blank"><span><i class="fa-brands fa-github"></i></span></a>
 </body>
 </html>
